tests/NormalTests/paczka1/small_fuzzy/23103041.err
Error in line 5: 60KATu S160 221,4
Error in line 6: 60KATu A85 87,4
Error in line 10: 1bKvJgEN A85 -4,4
Error in line 12: tQNX9 S916 27,1
Error in line 8: 60KATu S160 87,6
Error in line 15: LbrmOGeSfSZ S160 1N,4
